# fallingsand

./: .env.template  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  Trunk.deploy.toml  build.rs  index.html  trunk.toml
.cargo/: config.toml
.github/workflows/: ci.yaml  ci.yml  deploy-page.yaml  release.yaml
assets/shaders/: air_blur.wgsl  atmosphere.wgsl  blur.wgsl  cave_wall.wgsl  celestial_common.wgsl  chunk.wgsl  common.wgsl  composite.wgsl  downsample.wgsl  emissive_chunk.wgsl  game_backdrop.wgsl  game_celestial.wgsl  game_common.wgsl  game_light.wgsl  game_raster.wgsl  game_render.wgsl  game_scene.wgsl  game_world.wgsl  (+15 more)
benches/: cache.rs  disk.rs
crates/fallingsand_client/: Cargo.toml  build.rs
crates/fallingsand_client/src/: bodyview.rs  camera.rs  chat.rs  connscreen.rs  debug.rs  hud.rs  icon.rs  identity.rs  input.rs  interpolation.rs  inventory.rs  inventory_ui.rs  main.rs  menu.rs  net.rs  parallax.rs  particles.rs  pause.rs  player.rs  render.rs  settings.rs  sky.rs  worldview.rs
crates/fallingsand_client/src/debug/: borders.rs  mod.rs  stats.rs
crates/fallingsand_client/src/game/: chat.rs  clock.rs  debug.rs  hex.rs  identity.rs  input.rs  inventory.rs  menu.rs  mod.rs  net.rs  platform.rs  players.rs  settings.rs  world.rs
crates/fallingsand_client/src/game/input/: bindings.rs  keys.rs  mod.rs
crates/fallingsand_client/src/game/net/: embedded.rs  mod.rs  native.rs  wasm.rs
crates/fallingsand_client/src/shaders/: darkness.wgsl  moon.wgsl  starfield.wgsl  sun.wgsl
crates/fallingsand_client/src/sky/: lighting.rs  materials.rs  mod.rs
crates/fallingsand_client/src/view/: camera.rs  chunks.rs  icon.rs  io.rs  mod.rs  parallax.rs  particles.rs  players.rs  render.rs
crates/fallingsand_client/src/view/render/: atlas.rs  composite.rs  extract.rs  light_field.rs  mod.rs  primitives.rs  raster.rs  scene.rs  sky.rs  targets.rs
crates/fallingsand_client/src/view/sky/: lighting.rs  materials.rs  mod.rs
crates/fallingsand_client/src/view/ui/: chat.rs  connscreen.rs  debug.rs  game_menu.rs  hud.rs  icons.rs  inventory.rs  menu.rs  mod.rs  pause.rs  settings.rs  slots.rs
crates/fallingsand_client/src/view/ui/debug/: metrics.rs
crates/fallingsand_content/: Cargo.toml
crates/fallingsand_content/src/: author.rs  lib.rs  model.rs
crates/fallingsand_content/src/author/: items.rs  materials.rs  mod.rs  reactions.rs
crates/fallingsand_content/src/compiler/: items.rs  materials.rs  mod.rs  quantize.rs  reactions.rs
crates/fallingsand_content/src/definitions/: items.rs  mod.rs  reactions.rs  tuning.rs
crates/fallingsand_content/src/definitions/materials/: fire.rs  flora.rs  fluids.rs  mod.rs  ores.rs  special.rs  terrain.rs
crates/fallingsand_content/src/emit/: accessors.rs  items.rs  mod.rs  specs.rs
crates/fallingsand_core/: Cargo.toml  build.rs
crates/fallingsand_core/content/: reactions.material  reactions.rs
crates/fallingsand_core/content/materials/: fire.material  fire.rs  flora.material  flora.rs  fluids.rs  ores.material  ores.rs  special.rs  terrain.rs
crates/fallingsand_core/examples/: gen_icons.rs
crates/fallingsand_core/src/: calendar.rs  celestial.rs  cell.rs  chunk.rs  coords.rs  fixed.rs  item.rs  lib.rs  material.rs  region.rs  subcell.rs  vitals.rs
crates/fallingsand_core/src/content/: api.rs  items.rs  macros.rs  mod.rs  recipes.rs  spec.rs
crates/fallingsand_macros/: Cargo.toml
crates/fallingsand_macros/src/: dsl.rs  lib.rs  model.rs
crates/fallingsand_macros/src/emit/: accessors.rs  mod.rs  specs.rs
crates/fallingsand_net/: Cargo.toml
crates/fallingsand_net/src/: framing.rs  lib.rs  memory.rs  wt_native.rs  wt_wasm.rs
crates/fallingsand_protocol/: Cargo.toml
crates/fallingsand_protocol/src/: lib.rs  messages.rs  stats.rs  wire.rs
crates/fallingsand_server/: Cargo.toml
crates/fallingsand_server/src/: bodies.rs  cloudflare.rs  commands.rs  dig.rs  hazards.rs  inventory.rs  lib.rs  lifecycle.rs  main.rs  particles.rs  persistence.rs  physics.rs  player.rs  regions.rs  replication.rs  session.rs  sim.rs  systems.rs
crates/fallingsand_server/src/persistence/: player_record.rs  region_codec.rs  store.rs  worker.rs
crates/fallingsand_server/src/session/: auth.rs
crates/fallingsand_sim/: Cargo.toml
crates/fallingsand_sim/src/: bodies.rs  chemistry.rs  edits.rs  gas.rs  kernel.rs  lib.rs  liquid.rs  motion.rs  obstacles.rs  physics.rs  player.rs  powder.rs  raster.rs  rules.rs  window.rs  world.rs
crates/fallingsand_sim/src/bodies/: contact.rs  island.rs  mod.rs  rotation.rs  solver.rs  step.rs
crates/fallingsand_sim/src/physics/: mod.rs  movement.rs  player.rs
crates/fallingsand_worldgen/: Cargo.toml
crates/fallingsand_worldgen/examples/: preview.rs
crates/fallingsand_worldgen/src/: biomes.rs  caves.rs  features.rs  lib.rs  noise.rs  ores.rs  structures.rs  terrain.rs  water.rs
data/: biomes.ron  items.ron  materials.ron  reactions.ron  recipes.ron
docs/: Client.md  Content.md  Deploy.md  Glossary.md  Idea.md  Inventory.md  Networking.md  Overview.md  Physics.md  References.md  Server.md  Simulation.md  Tech.md  WorldModel.md  Worldgen.md  skysim.html
fallingsand-sim/: Cargo.toml
fallingsand_net/: Cargo.toml
fallingsand_net/src/: lib.rs
fallingsand_orchestrator/: Cargo.toml
fallingsand_server/: Cargo.toml  cargo.toml
fallingsand_server/src/: main.rs  network.rs
fallingsand_sim/: Cargo.toml
fallingsand_sim/benches/: simulation.rs
fallingsand_sim/src/: aabb.rs  chunk.rs  chunk_cache.rs  chunk_ticket.rs  chunk_tickets.rs  lib.rs  main.rs  orchestrator.rs  region.rs  region_manager.rs  region_simulator.rs  simulator.rs  util.rs  world.rs
fallingsand_sim/src/cell/: cached_cell.rs  cell.rs  mod.rs  simulator.rs  substep.rs  tile.rs
fallingsand_sim/src/entity/: chunk_ticket.rs  entity.rs  mod.rs
fallingsand_sim/src/myimpl/: entity.rs  mod.rs  tile.rs  tilesimulator.rs
fallingsand_sim/src/network/: mod.rs
fallingsand_sim/src/util/: aabb.rs  coords.rs  mod.rs  timer.rs  util.rs
src/: main.rs  network.rs
tools/: gen_icons.py
web/: index.html
(+27 files in other folders)
