[workspace]
resolver = "3"
members = [
    "crates/fallingsand_content",
    "crates/fallingsand_core",
    "crates/fallingsand_material",
    "crates/fallingsand_rng",
    "crates/fallingsand_sim",
    "crates/fallingsand_protocol",
    "crates/fallingsand_net",
    "crates/fallingsand_worldgen",
    "crates/fallingsand_server",
    "crates/fallingsand_client",
]

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.dependencies]
fallingsand_content = { path = "crates/fallingsand_content" }
fallingsand_core = { path = "crates/fallingsand_core" }
fallingsand_material = { path = "crates/fallingsand_material" }
fallingsand_rng = { path = "crates/fallingsand_rng" }
fallingsand_sim = { path = "crates/fallingsand_sim", default-features = false }
fallingsand_protocol = { path = "crates/fallingsand_protocol" }
fallingsand_net = { path = "crates/fallingsand_net" }
fallingsand_worldgen = { path = "crates/fallingsand_worldgen" }
fallingsand_server = { path = "crates/fallingsand_server" }

proc-macro2 = "1"
quote = "1"

serde = { version = "1.0.228", features = ["derive"] }
serde-big-array = "0.5"
postcard = { version = "1.1.3", features = ["use-std"] }
lz4_flex = "0.13.1"
thiserror = "2.0.18"
anyhow = "1.0.103"
rustc-hash = "2.1.3"
rayon = "1.12.0"
spin_sleep = "1.3"

bevy = { version = "0.19.0", default-features = false }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1.52.3", default-features = false }
redb = "4.1.0"
web-transport-quinn = "0.11.9"
web-transport-wasm = "0.5.8"
gloo-timers = { version = "0.3", features = ["futures"] }
rcgen = "0.14"
rustls-pki-types = "1"
sha2 = "0.10"
ed25519-dalek = "2.2"
getrandom = "0.3"
time = "0.3"
ctrlc = "3"
instant-acme = "0.8"
dotenvy = "0.15"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots"] }
serde_json = "1"

fastnoise-lite = "1.1.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[profile.dist]
inherits = "release"
lto = "fat"
strip = true
