[package]
name = "fallingsand_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1"
itertools = "0.11"
bevy = { version = "0.11", default-features = false, features = [] }
crossbeam-channel = "0"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
hashlink = "0.8"
spin_sleep = "1.1"
fallingsand_net = { path = "../fallingsand_net" }
flate2 = { version = "1.0", features = [], default-features = true }

[[bench]]
name = "simulation"
bench = true
