[package]
name = "fallingsand_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "2.0"
itertools = "0.14"
# bevy = { version = "0.14", default-features = false, features = [] }
crossbeam-channel = "0.5"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0"
hashlink = "0.10"
spin_sleep = "1.1"
fallingsand_net = { path = "../fallingsand_net" }
flate2 = { version = "1.0", features = [], default-features = true }
serde_with = "*"

[[bench]]
name = "simulation"
bench = true
