[package]
name = "fallingsand_client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fallingsand"
path = "src/main.rs"

[features]
dev = ["bevy/dynamic_linking", "bevy/dev", "bevy/embedded_watcher"]
tracy = ["bevy/trace_tracy"]

[build-dependencies]
embed-resource = "3"

[dependencies]
fallingsand_core = { workspace = true }
fallingsand_protocol = { workspace = true }
fallingsand_net = { workspace = true }
bevy = { workspace = true, features = [
    "std",
    "bevy_winit",
    "x11",
    "wayland",
    "multi_threaded",
    "default_font",
    "2d_bevy_render",
    "bevy_ui_render",
    "bevy_ui_widgets",
    "ui_picking",
    "system_clipboard",
    "bevy_asset",
    "bevy_log",
    "async_executor",
    "reflect_auto_register",
    "png",
] }
chrono = "0.4"
ed25519-dalek = { workspace = true }
serde = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
fallingsand_server = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
winit = { version = "0.30", default-features = false }
image = { version = "0.25", default-features = false, features = ["png"] }
getrandom = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
bevy = { workspace = true, features = [
    "std",
    "bevy_winit",
    "default_font",
    "2d_bevy_render",
    "bevy_ui_render",
    "bevy_ui_widgets",
    "ui_picking",
    "system_clipboard",
    "bevy_asset",
    "bevy_log",
    "async_executor",
    "reflect_auto_register",
    "web",
    "webgpu",
    "png",
] }
getrandom = { workspace = true, features = ["wasm_js"] }
web-sys = { version = "0.3", features = ["Window", "Location", "Storage", "UrlSearchParams"] }
