[package]
name = "fallingsand_content"
version.workspace = true
edition.workspace = true

[dependencies]
fallingsand_material = { workspace = true }
fallingsand_math = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { version = "2", features = ["full", "parsing"] }
prettyplease = "0.2"
