[package]
name = "fallingsand_core"
version.workspace = true
edition.workspace = true

[dependencies]
fallingsand_math = { workspace = true }
fallingsand_material = { workspace = true }
serde = { workspace = true }

[build-dependencies]
fallingsand_content = { workspace = true }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
