[package]
name = "fallingsand_macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
fallingsand_material = { workspace = true }
fallingsand_rng = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
