[package]
name = "fallingsand_net"
version.workspace = true
edition.workspace = true

[features]
wt-native = [
    "dep:web-transport-quinn",
    "dep:tokio",
    "dep:url",
    "dep:anyhow",
    "dep:rustls-pki-types",
    "dep:tracing",
]
wt-wasm = [
    "dep:web-transport-wasm",
    "dep:wasm-bindgen-futures",
    "dep:futures",
    "dep:gloo-timers",
    "dep:url",
]

[dependencies]
url = { version = "2", optional = true }
anyhow = { workspace = true, optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
web-transport-quinn = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["rt-multi-thread", "sync"] }
rustls-pki-types = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
web-transport-wasm = { workspace = true, optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
futures = { version = "0.3", optional = true }
gloo-timers = { workspace = true, optional = true }
