[package]
name = "fallingsand_net"
version.workspace = true
edition.workspace = true

[dependencies]
bytes = { workspace = true }
url = "2"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
web-transport-quinn = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
rustls-pki-types = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
web-transport-wasm = { workspace = true }
wasm-bindgen-futures = { version = "0.4" }
futures = { version = "0.3" }
gloo-timers = { workspace = true }
