[package]
name = "fallingsand_sim"
version.workspace = true
edition.workspace = true

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[dependencies]
fallingsand_core = { workspace = true }
fallingsand_data = { workspace = true }
fallingsand_rng = { workspace = true }
rustc-hash = { workspace = true }
rayon = { workspace = true, optional = true }
